# examplePETScGit

./: CMakeLists.txt  README.md  applicationExamples.cpp  applicationExamples.h  commonFunctions.cpp  main.cpp  testPETSc.h  testPETScKSP.cpp  testPETScKSP.h  testPETScMat.cpp  testPETScMat.h  testPETScSNES.cpp  testPETScSNES.h  testPETScVec.cpp  testPETScVec.h
